--- a/style.css
+++ b/style.css
@@ -108,3 +108,17 @@
 #content-container button:hover {
     opacity: 0.9;
 }
+
+/* footer */
+
+footer {
+    background-color: #fff;
+    padding: 100px 50px;
+    text-align: center;
+    color: #000;
+    font-size: 12px;
+}
+
+footer a {
+    color: #564fcc;
+}
